# NC_ecology

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile_cpu  README.md  agent.py  api.py  docker-compose.override.yml  docker-compose.yml  main.py  main2.py  main_base.py  pyproject.toml  pytest.ini  requirements.txt  requirements_cpu.txt  todo.md
.bak_local/: docx_template_engine.py.bak  docx_template_engine.py.bak_1782726408  qdrant.py.bak
api/: api_debug.py  api_prod.py  api_utils.py  concurrency_middleware.py  session_middleware.py  streamlit_app.py  task_manager.py  zip_collections.py
config/: config_file.py  langfuse_client.py
data/IN/: Анализ_и_введение.docx  Анализ_и_введение.json
src/: logger.py  pydantic_models.py  utils.py
src/agents/: agent.py  agent2.py  agent_base.py  agent_base_aux.py  utils.py
src/llm/: model.py  model_ai_tunnel.py
src/models/: __init__.py  model.py  model_ai_tunnel.py  model_ollama.py
src/mongo/: db_model.py  mongo_client.py  user_collections.py
src/project_data/: embeddings.py  qdrant.py  reranker.py
src/pydantic_models/: agent_base_models.py  aux_models.py
src/retrieval/: embeddings.py  qdrant.py  query_expansion_retrieval.py  rank_fusion.py  reranker.py  reranker_expansion.py  retrieval_expansion.py
src/templates/: combine_chapters.py  docx_template_engine.py  result.docx  template_engine.py  title_template.docx
src/utils/: logger.py  parse_word.py  utils.py  validators.py
static/: index.html
tests/: conftest.py  qdrant_test.py  test_qdrant.py
tests/integration/: test_agent.py  (+6 more)
(+38 files in other folders)
