[project]
name = "nc-ecology"
version = "0.1.0"
description = "Автоматизированная подготовка разделов экологической проектной документации"
requires-python = ">=3.11"
dependencies = [
    "docxtpl>=0.20.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.5.1",
    "langgraph>=1.1.9",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "openai>=2.32.0",
    "pandas>=2.2.0",
    "pdfminer.six>=20260107",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.46.0",
    "pywin32>=311; sys_platform == 'win32'",
    "httpx2>=2.4.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
]

[tool.uv]
package = false
index-url = "https://mirrors.aliyun.com/pypi/simple/"
